// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsiblePanel should render default with expanded key/value content 1`] = `
<div
  className="panel panel-default tc-collapsible-panel default-panel open"
>
  <div
    className="panel-heading panel-heading"
  >
    <button
      className="panel-title panel-title btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="panel-title panel-title"
      >
        <div
          className="undefined col-4"
        >
          <div
            className="tc-status tc-status action"
            role="status"
          >
            <span
              className="tc-status-icon tc-status-icon info"
            >
              <i
                aria-hidden="true"
                className="fa fa-check"
                focusable="false"
                title={null}
              />
            </span>
            <span
              className="tc-status-label tc-status-label"
            >
              inProgress
            </span>
            <span
              className="tc-status-actions tc-status-actions"
            >
              <div
                className="tc-actions btn-group"
              >
                <button
                  className="btn btn-default"
                  disabled={false}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  role={null}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-cancel"
                    focusable="false"
                    title={null}
                  />
                  <span>
                    cancel
                  </span>
                </button>
                <button
                  className="btn btn-default"
                  disabled={false}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  role={null}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-delete"
                    focusable="false"
                    title={null}
                  />
                  <span>
                    delete
                  </span>
                </button>
              </div>
            </span>
          </div>
        </div>
        <div
          className="undefined col-4"
        >
          <button
            className="undefined btn btn-link"
            disabled={false}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button"
          >
            <i
              aria-hidden="true"
              className="fa fa-edit"
              focusable="false"
              title={null}
            />
          </button>
        </div>
        <div
          className="undefined col-4"
        >
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            by Charles
          </span>
        </div>
        <div
          className="group col-4"
        >
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            on TDP
          </span>
          <span
            className="undefined label label-default"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            XML
          </span>
        </div>
      </div>
    </button>
    <button
      className="toggle toggle btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-caret-down"
        />
      </svg>
    </button>
  </div>
  <div
    className="panel panel-default"
    id={null}
  >
    <div
      aria-expanded={null}
      aria-hidden={false}
      className="panel-collapse collapse in"
      id={undefined}
      role={undefined}
    >
      <div
        className="panel-body"
      >
        <dl>
          <div
            className="content"
          >
            <dt
              className="label"
            >
              <span
                className="label label-default"
              >
                Content
              </span>
            </dt>
            <dd
              className="description"
            >
              Description3
            </dd>
          </div>
        </dl>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render default with key/value content 1`] = `
<div
  className="panel panel-default tc-collapsible-panel default-panel"
>
  <div
    className="panel-heading panel-heading"
  >
    <button
      className="panel-title panel-title btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="panel-title panel-title"
      >
        <div
          className="undefined col-4"
        >
          <div
            className="tc-status tc-status action"
            role="status"
          >
            <span
              className="tc-status-icon tc-status-icon info"
            >
              <i
                aria-hidden="true"
                className="fa fa-check"
                focusable="false"
                title={null}
              />
            </span>
            <span
              className="tc-status-label tc-status-label"
            >
              inProgress
            </span>
            <span
              className="tc-status-actions tc-status-actions"
            >
              <div
                className="tc-actions btn-group"
              >
                <button
                  className="btn btn-default"
                  disabled={false}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  role={null}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-cancel"
                    focusable="false"
                    title={null}
                  />
                  <span>
                    cancel
                  </span>
                </button>
                <button
                  className="btn btn-default"
                  disabled={false}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  role={null}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-delete"
                    focusable="false"
                    title={null}
                  />
                  <span>
                    delete
                  </span>
                </button>
              </div>
            </span>
          </div>
        </div>
        <div
          className="undefined col-4"
        >
          <button
            className="undefined btn btn-link"
            disabled={false}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button"
          >
            <i
              aria-hidden="true"
              className="fa fa-edit"
              focusable="false"
              title={null}
            />
          </button>
        </div>
        <div
          className="undefined col-4"
        >
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            by Charles
          </span>
        </div>
        <div
          className="group col-4"
        >
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            on TDP
          </span>
          <span
            className="undefined label label-default"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            XML
          </span>
        </div>
      </div>
    </button>
    <button
      className="toggle toggle btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-caret-down"
        />
      </svg>
    </button>
  </div>
  <div
    className="panel panel-default"
    id={null}
  >
    <div
      aria-expanded={null}
      aria-hidden={true}
      className="panel-collapse collapse"
      id={undefined}
      role={undefined}
    >
      <div
        className="panel-body"
      >
        <dl>
          <div
            className="content"
          >
            <dt
              className="label"
            >
              <span
                className="label label-default"
              >
                Content
              </span>
            </dt>
            <dd
              className="description"
            >
              Description3
            </dd>
          </div>
        </dl>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render default without content 1`] = `
<div
  className="panel panel-default tc-collapsible-panel default-panel"
>
  <div
    className="panel-heading panel-heading"
  >
    <button
      className="panel-title panel-title btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="panel-title panel-title"
      >
        <div
          className="undefined col-4"
        >
          <div
            className="tc-status tc-status action"
            role="status"
          >
            <span
              className="tc-status-icon tc-status-icon info"
            >
              <i
                aria-hidden="true"
                className="fa fa-check"
                focusable="false"
                title={null}
              />
            </span>
            <span
              className="tc-status-label tc-status-label"
            >
              inProgress
            </span>
            <span
              className="tc-status-actions tc-status-actions"
            >
              <div
                className="tc-actions btn-group"
              >
                <button
                  className="btn btn-default"
                  disabled={false}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  role={null}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-cancel"
                    focusable="false"
                    title={null}
                  />
                  <span>
                    cancel
                  </span>
                </button>
                <button
                  className="btn btn-default"
                  disabled={false}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  role={null}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-delete"
                    focusable="false"
                    title={null}
                  />
                  <span>
                    delete
                  </span>
                </button>
              </div>
            </span>
          </div>
        </div>
        <div
          className="undefined col-4"
        >
          <button
            className="undefined btn btn-link"
            disabled={false}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button"
          >
            <i
              aria-hidden="true"
              className="fa fa-edit"
              focusable="false"
              title={null}
            />
          </button>
        </div>
        <div
          className="undefined col-4"
        >
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            by Charles
          </span>
        </div>
        <div
          className="group col-4"
        >
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            on TDP
          </span>
          <span
            className="undefined label label-default"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            XML
          </span>
        </div>
      </div>
    </button>
  </div>
  <div
    className="panel panel-default"
    id={undefined}
  />
</div>
`;

exports[`CollapsiblePanel should render themed with textual content 1`] = `
<div
  className="panel panel-default tc-collapsible-panel descriptive-panel"
>
  <div
    className="panel-heading panel-heading"
  >
    <button
      className="panel-title panel-title btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="panel-title panel-title"
      >
        <div
          className="group col-2"
        >
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            Version 1 Version 1
          </span>
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            (Read Only)
          </span>
        </div>
        <div
          className="undefined col-2"
        >
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            03/02/2017 14:44:55
          </span>
        </div>
      </div>
    </button>
    <button
      className="toggle toggle btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-caret-down"
        />
      </svg>
    </button>
  </div>
  <div
    className="panel panel-default"
    id={null}
  >
    <div
      aria-expanded={null}
      aria-hidden={true}
      className="panel-collapse collapse"
      id={undefined}
      role={undefined}
    >
      <div
        className="panel-body"
      >
        <div
          className="content"
        >
          <div
            className="head"
          >
            <span
              className={undefined}
              onFocus={[Function]}
              onMouseOver={[Function]}
            >
              21 step
            </span>
            <span
              className="text-right"
              onFocus={[Function]}
              onMouseOver={[Function]}
            >
              by Abdelaziz Maalej test 1 test 2 test 1 test 2
            </span>
          </div>
          <div
            className="content-description content-description"
          >
            Lorem ipsum dolor sit amet, consectv eturelit Lorem  adipiscing elit.
            		Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
            		 consectetur adipiscing elit Lorem ipsum dolor sit nsectetur adipiscing elit Lorem
            		ipsum dolor sit amet, consectetur adipiscing elit Lorem dolor sit amet, consectetur
            		 adipiscing elitipsum dolor sit amet, consectv eturelit Lorem  adipis decing elit.
            		Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
            		 consectetur adipiscing elit Lorem ipsum dolor sit nsectetur adipiscing elit Lorem
            		ipsum dolor sit amet, consectetur adipiscing elit Lorem dolor sit amet, consectetur
            		 adipiscing elit
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render themed without textual content 1`] = `
<div
  className="panel panel-default tc-collapsible-panel default-panel"
>
  <div
    className="panel-heading panel-heading"
  >
    <button
      className="panel-title panel-title btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="panel-title panel-title"
      >
        <div
          className="group col-2"
        >
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            Version 1 Version 1
          </span>
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            (Read Only)
          </span>
        </div>
        <div
          className="undefined col-2"
        >
          <span
            className="undefined"
            onFocus={[Function]}
            onMouseOver={[Function]}
          >
            03/02/2017 14:44:55
          </span>
        </div>
      </div>
    </button>
  </div>
  <div
    className="panel panel-default"
    id={undefined}
  />
</div>
`;
